--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -24,10 +24,7 @@
           &copy;
           = Time.now.year
         %section.poweredby
-          -#
-            Proudly published with
-            %a{href: 'http://middlemanapp.com'} Middleman
           Casper theme powered by
-          %a{href: 'https://ghost.org'} Ghost
+          %a{href: 'https://ghost.org', target: '_blank'} Ghost
 
     = javascript_include_tag :application
