--- a/source/ross-hunter.html.haml
+++ b/source/ross-hunter.html.haml
@@ -1,8 +1,3 @@
----
-pageable: true
-per_page: 6
----
-
 %header.main-header.author-head{cover}
   %nav.main-nav.overlay.clearfix
     - if blog_settings.logo.present?
@@ -31,5 +26,10 @@ per_page: 6
       = pluralize(blog.articles.count, 'post')
 
 %main#content.content{role: :main}
-  = partial(:page_articles,
-            locals: { page_articles: page_articles, paginate: paginate })
+  %main.content{role: :main}
+    %article.post
+      %header.post-header
+        %h1.post-title= current_page.data.title
+      %section.post-content
+        = partial(:bio)
+
