--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -8,3 +8,9 @@ pre.highlight {
     white-space: pre;
   }
 }
+
+.main-header-content.inner {
+  background: rgba(0,0,0,.8);
+  border-radius: 10px;
+  padding: 1em;
+}
