Adding some style

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -24,7 +24,7 @@
           &copy;
           = Time.now.year
         %section.poweredby
-          Casper theme powered by
+          Based on the Casper theme powered by
           %a{href: 'https://ghost.org', target: '_blank'} Ghost
 
     = javascript_include_tag :application
