--- a/source/ross-hunter.html.haml
+++ b/source/ross-hunter.html.haml
@@ -1,3 +1,7 @@
+---
+cover: 'bg.png'
+---
+
 %header.main-header.author-head{cover}
   %nav.main-nav.overlay.clearfix
     - if blog_settings.logo.present?
