--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -14,3 +14,18 @@ pre.highlight {
   border-radius: 10px;
   padding: 1em;
 }
+
+.no-cover.post-head.main-header {
+  height: 200px;
+  background-image: url('/images/bg.png');
+}
+
+.nav-closed .no-cover .menu-button {
+  background-color: white;
+}
+
+.menu-button {
+  border-width: 3px;
+  height: 42px;
+  box-shadow: 0px 0px 2px white;
+}
