Add stub for portfolio

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -27,7 +27,7 @@ cover: 'bg.png'
         %a{href: blog_author.website}= blog_author.website
     %span.author-stats
       %i.icon-stats
-      %a{href: '/blog'}= pluralize(blog.articles.count, 'post')
+      %a{href: '/blog'}= pluralize(blog.articles.count, 'blog post')
 
 %main#content.content{role: :main}
   %main.content{role: :main}
