Update the bio and link to the blogs

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -76,3 +76,5 @@ cover: 'bg.png'
         %section.post
           %h2= sixth_article.title
           %p #{read_next_summary(sixth_article, 19)}&hellip;
+  %nav.pagination
+    %a.all-the-blogs{href: '/blog'}= 'View All Posts →'
